# functional-lang

./: Cargo.toml  EFFECTS.md  README.md  notes.md
examples/: import.fl  lib.fl  simple.fl
src/: common.rs  error.rs  hashed_hashmap.rs  importing.rs  intern.rs  lib.rs  macros.rs
src/evaluation/: mod.rs
src/parsing/: mod.rs  syntax.lalrpop
src/pipeline/: mod.rs
src/reprs/: ast.rs  common.rs  mod.rs  typed_ir.rs  untyped_ir.rs  value.rs
src/stdlib/: mod.rs
src/typing/: checking.rs  context.rs  effects.rs  error.rs  eval.rs  map_vars.rs  merge.rs  mod.rs  subtyping.rs  ty.rs
src/validation/: mod.rs
stdlib/: prelude.fl
tests/: examples.rs  snippets.rs
tests/common/: mod.rs
