[package]
name = "functional_lang"
version = "0.1.0"
edition = "2024"
default-run = "funclang"

[[bin]]
name = "funclang"
path = "src/bin/mod.rs"
required-features = [ "binary" ]

[features]
default = []
binary = ["dep:clap", "dep:clio"]

[dependencies]
annotate-snippets = "0.12.11"
clap = { version = "4.5.53", optional = true, features = ["derive"] }
clio = { version = "0.3.5", optional = true, features = ["clap-parse"] }
derive-where = "1.6.0"
hashbrown = "0.16.1"
include_dir = "0.7.4"
itertools = "0.14.0"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
typed-arena = "2.0.2"
typed-path = "0.12.2"

[dev-dependencies]
pretty_assertions = "1.4.1"

[build-dependencies]
lalrpop = "0.22.2"
